fixed spacing of the titles

--- a/style.css
+++ b/style.css
@@ -50,7 +50,7 @@ nav a:hover{
 .header{
     position: relative;
     width: 100%;
-    height: 100vh;
+    height: 96vh;
     background: rgba(0, 81, 255, 0.568);
     display: flex;
     /* justify-content: center; */
@@ -99,7 +99,7 @@ nav a:hover{
     width: 300px;
     height: 300px;
     border-radius: 50%;
-    margin-top: -950px;
+    margin-top: -900px;
     margin-right: 100px;
 }
 
